# RestfulAPI_test_task

./: .env_exmp  .gitignore  README.md  main.py  pyproject.toml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 3e476675d184_reason_of_blocking.py  5ed2d3869ce5_response_on_comment_field.py  80b4b7002b5f_user_auto_response.py  8fff49cfeee9_user_is_admin.py  94be5973de84_blocked_block_reason_for_post_table.py  b087475f29f2_response_interval.py  c3bc99706d3c_blocked_comment_or_not.py  d9f60809d632_init.py  f783a413a8b8_no_photo.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: comments.py  posts.py  users.py
src/routes/: auth.py  comments.py  posts.py  users.py
src/services/: ai_services.py  auth.py  email.py
src/services/ai/: claude_ai.py  gemini_ai.py  gpt_or_llama_ai.py
src/services/templates/: email_template.html
tests/: test_repository_comments.py  test_repository_posts.py  test_repository_users.py  test_routes_auth.py  test_routes_comments.py  test_routes_posts.py  test_routes_users.py
